--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //추가
+
 }
 
 tasks.named('test') {
